testdata/prettier/w-if-miss-stmt-else.goat
proc main()
begin
if a > 1 then else a:=24; fi
end
